# shm_manager

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: CMakeLists.txt  example.cpp  example.py  example_structstore.py
src/: shm_manager.hpp  shm_manager_pybind.cpp
